# heat-equation

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  env_altera.sh
cmake/: FindAVX.cmake  FindAlteraCL.cmake  FindMKL.cmake  FindOpenCL.cmake
initial/: README.md  function.txt  function2.txt  generation.py  setting.ini  setting2.ini  setting3.ini
initial_test/: function.txt  setting.ini
modules/: CMakeLists.txt  README.md
modules/Kirill/: CMakeLists.txt
modules/Kirill/app/: CMakeLists.txt  euler.c  euler_naive.c  implicit.c  main.c  runge.c  runge_naive.c
modules/Kirill/include/: createSpMat.h  kernel.h  multMV.h  parser.h  sgpu.h  sp_mat.h  ts.h  ts.h.in
modules/Kirill/include/utils/: opencl.h  ts.h  ts.h.in
modules/Kirill/src/: CMakeLists.txt  createSpMat.c  kernel.c  kernel.cl  multMV.c  opencl.c  opencl.cc  parser.c  sgpu.c  sp_mat.c
modules/Kirill/src/utils/: opencl.c
modules/Sergey/: CMakeLists.txt
modules/Sergey/Euler/: CMakeLists.txt
modules/Sergey/Euler/src/: Task.cpp  Task.h  main.cpp
modules/Sergey/Euler3D/: CMakeLists.txt
modules/Sergey/Euler3D/include/: SparseMatrix.h  StructDeclamer.h  Task.h  Task2.h
modules/Sergey/Euler3D/src/: SparseMatrix.cpp  SparseMatrix.h  StructDeclamer.cpp  StructDeclamer.h  Task.cpp  Task.h  Task2.cpp  main.cpp
modules/Sergey/MPI/: CMakeLists.txt
modules/Sergey/MPI/app/: CMakeLists.txt  Euler.cpp  mpi_test.cpp
modules/Sergey/MPI/include/: SparseMatrix.h  Task.h
modules/Sergey/MPI/src/: CMakeLists.txt  SparseMatrix.cpp  Task.cpp
modules/Sergey/OpenMP/: CMakeLists.txt
modules/Sergey/OpenMP/app/: Euler.cpp  Implicit.cpp  Runge.cpp
modules/Sergey/OpenMP/include/: SparseMatrix.h  Task.h
modules/Sergey/OpenMP/src/: SparseMatrix.cpp  Task.cpp
modules/Sergey/Runge-Kutta/: CMakeLists.txt
modules/Sergey/Runge-Kutta/include/: SparseMatrix.h
modules/Sergey/app/: CMakeLists.txt  Euler.cpp  Runge.cpp
modules/Sergey/include/: StructDeclamer.h
modules/Sergey/src/: SparseMatrix.cpp  Task.cpp
result/: README.md
result/Kirill/: README.md  euler.txt  euler1D.txt  euler3D.txt  implicit1D.txt  implicit3D.txt  result.txt  runge.txt  runge1D.txt  runge3D.txt
result/Kirill/faults/: plot.py  plot_mpi.py  run.sh  run_ieuler.sh  run_runge.sh
result/Sergey/: Sergey_Euler.txt  Sergey_Euler2_full.txt  Sergey_Euler_MPI2_full.txt  Sergey_Euler_OUTPUT.txt  Sergey_Runge.txt  Sergey_Sparse_Euler_OUTPUT.txt  Sergey_Sparse_Euler_OUTPUT_old.txt
result/Sergey/sh/: 4D.sh  4D_2.sh  4D_nMPI.sh  4D_nMPI2.sh  4D_tess.sh  4D_test.sh  fault_MPI_full.sh  fault_MPI_full_test.sh
script/: README.md  fault.py  generation.py  generation3.py  plot4D.py  plotX.py
